--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.redislabs</groupId>
 	<artifactId>spark-redis</artifactId>
-	<version>2.3.0-SNAPSHOT</version>
+	<version>1.6.3-SNAPSHOT</version>
 	<name>Spark-Redis</name>
 	<description>A Spark library for Redis</description>
 	<url>http://github.com/RedisLabs/spark-redis</url>
@@ -34,13 +34,15 @@
 	</licenses>
 
 	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
-		<scala.major.version>2.11</scala.major.version>
-		<scala.complete.version>${scala.major.version}.12</scala.complete.version>
+		<!--java.version>1.8</java.version-->
+		<scala.major.version>2.10</scala.major.version>
+		<scala.complete.version>${scala.major.version}.5</scala.complete.version>
 		<jedis.version>2.9.0</jedis.version>
-		<spark.version>2.3.1</spark.version>
+		<spark.version>1.6.3</spark.version>
 	</properties>
 
 	<distributionManagement>
